fix home announcement expand/collapse JS

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1698,7 +1698,7 @@ input.date-picker {
     text-align: left;
     margin-right: 10px;
     margin-bottom: 0;
-    max-height: 300px;
+    display: none; /* will be shown in JS */
     
     & h1 > a {
       color: var(--text);
